100_monitoring/o11y/telegraf.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: monitoring
  labels:
    app: monitoring
spec:
  selector:
    matchLabels:
      app: monitoring
  template:
    metadata:
      name: monitoring
      labels:
        app: monitoring
    spec:
      serviceAccountName: default
      restartPolicy: Always
      containers:
      - name: telegraf
        image: telegraf:1.12
        imagePullPolicy: Always
        volumeMounts:
        - name: sys
          mountPath: /rootfs/sys
          readOnly: true
        - name: proc
          mountPath: /rootfs/proc
          readOnly: true
        - name: config
          mountPath: /etc/telegraf
      volumes:
      - name: sys
        hostPath:
          path: /sys
          type: ""
      - name: proc
        hostPath:
          path: /proc
          type: ""
      - name: config
        configMap:
          defaultMode: 420
          name: monitoring
